--- a/views/show.ejs
+++ b/views/show.ejs
@@ -8,8 +8,14 @@
 <body>
     <h1><%= camp.title %></h1>
     <h2><%= camp.location %></h2>
+    <form action="/campgrounds/<%= camp.id %>?_method=DELETE" method="POST">
+        <button>Delete</button>
+    </form>
     <footer>
         <a href="/campgrounds">All Campgrounds</a>
+        <div>
+            <a href="/campgrounds/<%= camp._id %>/edit">Update Camp</a>
+        </div>
     </footer>
 </body>
 </html>
