--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,19 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Campgrounds</title>
-</head>
-<body>
-    <h1>All Campgrounds</h1>
-    <ul>
-        <% for ( let c of camps ){%>
-            <a href="/campgrounds/<%= c._id %>"><li><%=c.title %></li></a>
-        <% } %>
-    </ul>
-    <footer>
-        <a href="/campgrounds/new">Add new</a>
-    </footer>
-</body>
-</html>
+<% layout('layouts/boilerplate') %>
+<h1>All Campgrounds</h1>
+<ul>
+    <% for ( let c of camps ){ %>
+        <div class="card mb-3">
+            <div class="row g-0"> <!-- Add row and gap classes -->
+                <div class="col-md-4">
+                    <img class="img-fluid" alt="" src="<%= c.image %>">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title"><%= c.title %></h5>
+                        <p class="card-text"><%= c.description %></p>
+                        <p class="card-text">
+                            <small class="text-muted"><%= c.location %></small>
+                        </p>
+                        <a href="/campgrounds/<%= c._id %>" class="btn btn-primary">View <%= c.title %></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    <% } %>
+</ul>
+<footer>
+    <a href="/campgrounds/new">Add new</a>
+</footer>
