--- a/views/show.ejs
+++ b/views/show.ejs
@@ -18,6 +18,20 @@
                     <button class="btn btn-danger">Delete</button>
                 </form>
             </div>
+            <h2>Leave a review</h2>
+            <form action="/campgrounds/<%= camp._id %>/reviews" method="post" class="form-control" mb-3>
+                <div class="mb-3">
+                    <label for="rating" class="form-label">Rating</label>
+                    <input type="range" name="review[rating]" id="rating" min="1" max="5" class="form-range">
+                </div>
+                <div class="mb-3">
+                    <label for="body" class="form-label">Review</label>
+                    <textarea name="review[body]" id="body" cols="30" rows="3"class="form-control"></textarea>
+                </div>
+                <div class="mb-3">
+                    <button class="btn btn-primary">Submit</button>
+                </div>
+            </form>
             <div class="card-footer text-muted">
                 2 days ago
             </div>
