--- a/views/show.ejs
+++ b/views/show.ejs
@@ -19,19 +19,33 @@
                 </form>
             </div>
             <h2>Leave a review</h2>
-            <form action="/campgrounds/<%= camp._id %>/reviews" method="post" class="form-control" mb-3>
+            <form action="/campgrounds/<%= camp._id %>/reviews" method="post" class="form-control require-validation" mb-3 novalidate>
                 <div class="mb-3">
                     <label for="rating" class="form-label">Rating</label>
                     <input type="range" name="review[rating]" id="rating" min="1" max="5" class="form-range">
                 </div>
                 <div class="mb-3">
                     <label for="body" class="form-label">Review</label>
-                    <textarea name="review[body]" id="body" cols="30" rows="3"class="form-control"></textarea>
+                    <textarea name="review[body]" id="body" cols="30" rows="3"class="form-control" required></textarea>
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
                 </div>
                 <div class="mb-3">
                     <button class="btn btn-primary">Submit</button>
                 </div>
-            </form>
+            
+            <div class="mb-3">
+                <% for(let review of camp.review) {%>
+                    <div class="mb-3">
+                        <p> Rating: <%= review.rating %></p>
+                    </div>
+                    <div>
+                        <p> Review: <%= review.body %></p>
+                    </div>
+                <% } %>
+            </div>
+        </form>
             <div class="card-footer text-muted">
                 2 days ago
             </div>
