--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate')%>
 
 <div class="row">
-    <div class="col-6 offset-3">
+    <div class="col-6">
         <div class="card mb-3">
             <img src="<%= camp.image%>" class="card-img-top" alt="...">
             <div class="card-body">
@@ -18,37 +18,36 @@
                     <button class="btn btn-danger">Delete</button>
                 </form>
             </div>
-            <h2>Leave a review</h2>
-            <form action="/campgrounds/<%= camp._id %>/reviews" method="post" class="form-control require-validation" mb-3 novalidate>
-                <div class="mb-3">
-                    <label for="rating" class="form-label">Rating</label>
-                    <input type="range" name="review[rating]" id="rating" min="1" max="5" class="form-range">
-                </div>
-                <div class="mb-3">
-                    <label for="body" class="form-label">Review</label>
-                    <textarea name="review[body]" id="body" cols="30" rows="3"class="form-control" required></textarea>
-                    <div class="valid-feedback">
-                        Looks good!
-                    </div>
-                </div>
-                <div class="mb-3">
-                    <button class="btn btn-primary">Submit</button>
-                </div>
-            
-            <div class="mb-3">
-                <% for(let review of camp.review) {%>
-                    <div class="mb-3">
-                        <p> Rating: <%= review.rating %></p>
-                    </div>
-                    <div>
-                        <p> Review: <%= review.body %></p>
-                    </div>
-                <% } %>
-            </div>
-        </form>
             <div class="card-footer text-muted">
                 2 days ago
             </div>
         </div>
+    </div>
+    <div class="col-6">
+        <form action="/campgrounds/<%= camp._id %>/reviews" method="post" class="form-control require-validation" mb-3 novalidate>
+            <h2>Leave a review</h2>
+            <div class="mb-3">
+                <label for="rating" class="form-label">Rating</label>
+                <input type="range" name="review[rating]" id="rating" min="1" max="5" class="form-range">
+            </div>
+            <div class="mb-3">
+                <label for="body" class="form-label">Review</label>
+                <textarea name="review[body]" id="body" cols="30" rows="3"class="form-control" required></textarea>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div>
+            <div class="mb-3">
+                <button class="btn btn-primary">Submit</button>
+            </div>
+        </form>
+        <% for(let review of camp.review) {%>
+            <div class="card mb-3">
+                <div class="card-body">
+                    <h5 class="card-title">Rating: <%= review.rating %></h5>
+                    <p> Review: <%= review.body %></p>
+                </div>
+            </div>
+        <% } %>
     </div>
 </div>
