--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -10,14 +10,17 @@
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item text-muted"><%= camp.location%></li>
+                <li class="list-group-item text-muted">Submitted by <%= camp.author.username%></li>
                 <li class="list-group-item">$<%= camp.price%>/night</li>
             </ul>
+            <% if(currentUser && camp.author.equals(currentUser)) {%>
             <div class="card-body">
                 <a class="card-link btn btn-info" href="/campgrounds/<%=camp._id%>/edit">Edit</a>
                 <form class="d-inline" action="/campgrounds/<%=camp._id%>?_method=DELETE" method="POST">
                     <button class="btn btn-danger">Delete</button>
                 </form>
             </div>
+            <% } %>
             <div class="card-footer text-muted">
                 2 days ago
             </div>
