--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -27,6 +27,7 @@
         </div>
     </div>
     <div class="col-6">
+        <% if(currentUser) {%>
         <form action="/campgrounds/<%= camp._id %>/reviews" method="post" class="form-control require-validation" mb-3 novalidate>
             <h2>Leave a review</h2>
             <div class="mb-3">
@@ -44,14 +45,18 @@
                 <button class="btn btn-primary">Submit</button>
             </div>
         </form>
+        <% } %>
         <% for(let review of camp.review) {%>
             <div class="card mb-3">
                 <div class="card-body">
                     <h5 class="card-title">Rating: <%= review.rating %></h5>
+                    <h6 class="card-subtitle mb-2 text-body-secondary">By <%= review.author.username %></h6>
                     <p> Review: <%= review.body %></p>
+                    <% if(currentUser && review.author.equals(currentUser)) {%>
                     <form action="/campgrounds/<%= camp._id%>/reviews/<%= review._id%>?_method=DELETE" method="post">
                         <button class="btn btn-sm btn-danger">DELETE</button>
                     </form>
+                    <% } %>
                 </div>
             </div>
         <% } %>
